fix:scrollbar hide

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -20,6 +20,8 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
   background-color: #000000;
+  overflow-x: hidden;
+  overflow-y: hidden;
 }
 
 * {
